--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -37,7 +37,7 @@ on:
 jobs:
   build:
     name: Build and Push Image
-    runs-on: blacksmith-4vcpu-ubuntu-2204
+    runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
@@ -67,12 +67,12 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Setup Docker Builder
-        uses: useblacksmith/setup-docker-builder@v1
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Build and push image to Amazon ECR
         id: build-image
-        uses: useblacksmith/build-push-action@v2
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ${{ inputs.dockerfile_path }}
