--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,7 +42,7 @@ jobs:
 
   deploy:
     name: Deploy to ${{ inputs.target }}
-    runs-on: blacksmith-4vcpu-ubuntu-2204
+    runs-on: ubuntu-latest
     needs: build
     env:
       IMAGE_NAME: ${{ needs.build.outputs.image_name }}
